--- a/docs/paper/paper.tex
+++ b/docs/paper/paper.tex
@@ -34,22 +34,28 @@ Email: jcliu@cs.sfu.ca}}
 \maketitle
 
 \begin{abstract}
-A large amount of free software packages are available over the
-Internet from many different distributors. Most of these
-distributors use the traditional client-server model to handle
-requests from users. However, there is an excellent opportunity to
-use peer-to-peer techniques to reduce the cost of much of this
-distribution, especially due to the altruistic nature of many of
-these users. There are no existing solutions suitable for this
-situation, so we present a new technique for satisfying the needs of
-this P2P distribution which is generally applicable to many of
-these distributors' systems. Our method makes use of a DHT for
-storing the location of peers, using the cryptographic hash of the
-package as a key. To show the simplicity and functionality of our model, we
-implement a solution for the distribution of Debian software
-packages, including details on the DHT customizations and system optimizations needed. Finally, we
-analyze our system to determine how it is performing and what effect
-it is having.
+The Internet has become an cost-effective
+vehicle for software development and release, particular in the free software society.
+Given the free nature of these software, there are often a number of users
+motivated by altruism to help out with the distribution, so as to promote the healthy development
+of this voluntary society. It is thus naturally expected that peer-to-peer distribution can be implemented,
+which scale well with large user bases and can easily explore the network resources made available by
+the volunteers.
+
+Unfortunately, this application scenario has many unique characteristics, which
+make a straightforward adoption of such existing peer-to-peer systems for file sharing as BitTorrent suboptimal. In particular,
+a software release often consists of a large number of packages, which are difficult to be distributed individually, but the archive is
+too large to be distributed in its entirety. The packages are also being constantly
+updated by the loosely-managed developed; yet the interest in a particular version of a package can be very
+limited depending on the computer platforms and operating systems used.
+
+In this paper, we propose a novel peer-to-peer assisted distributor design that
+addresses the above challenges. It enhances the existing distribution systems by providing compatible and yet more efficient downloading and updating services
+for software packages. Our design leads to \texttt{apt-p2p}, a practical implementation that extends the popular \texttt{apt} distributor.  \texttt{apt-p2p}  has been used in conjuction with Debian-based distribution of Linux
+software packages and will also be available in the next release of Ubuntu. We have addressed the key design issues in \texttt{apt-p2p}, including indexing table customization,
+response time reduction, and multi-value extension. They together ensure
+that the altruistic users' resources be effectively utilized and thus significantly reduce the currently
+sheer bandwidth requirements of hosting the software, as confirmed by our existing real user statistics.
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -57,39 +63,45 @@ it is having.
 \section{Introduction}
 \label{intro}
 
-There are a large number of free software package distributors using
-package distribution systems over the Internet to distribute
-software to their users. These distributors have developed many
-different methods for this distribution, but they almost exclusively
-use a client-server model to satisfy user requests. The popularity
-and number of users results in a large number of requests, which
-usually requires a network of mirrors to handle. Due to the free
-nature of this software, many users are willing and able to
-contribute upload bandwidth to this distribution, but have no
-current way to do this.
+With the widespread penetration of broadband accesses, the Internet has become an cost-effective
+vehicle for software development and release. This is particularly true for the free software
+society whose developers and users are worldwide distributed and work asynchronously. The ever increasing power of
+modern programming languages, computer platforms, and operating systems has made these software extremely large and complex,
+which are often divided into a huge number of small packages.
+Together with their popularity among users,
+an efficient and reliable management and distribution of these software over the Internet has become a challenging task.
 
-We present a new peer-to-peer distribution model to meet these
-demands. It is based on many previous implementations of successful
-peer-to-peer protocols, especially distributed hash tables (DHT) and
-BitTorrent. The model relies on the pre-existence of cryptographic
-hashes of the packages, which uniquely identify it for a
-request from other peers. If the peer-to-peer download fails, then
-the original request to the server is used as a fallback to prevent
-any dissatisfaction from users. The peer can then share this new
-package with others through the P2P system.
+The existing distributor for free software are mostly based on the client/server model, e.g.,
+the Advanced Package Tool (\texttt{apt}) for Linux, which suffers from the well-known bottleneck problem.
+Given the free nature of these software, there are often a number of users
+motivated by altruism to help out with the distribution, so as to promote the healthy development
+of this voluntary society.
+We thus naturally expect that peer-to-peer distribution can be implemented in
+this context, which scale well with large user bases and can easily explore the network resources made available by
+the volunteers.
 
-First, we examine the opportunity that is available for many of
-these free software package distributors. We present an overview of
-a system that would efficiently satisfy the demands of a large
-number of users, and should significantly reduce the currently
-substantial bandwidth requirements of hosting this software. We then
-present an example implementation based on the Debian package
-distribution system. This implementation will be used by a large
-number of users, and serves as an example for other free software
-distributors of the opportunity that can be met with such a system.
-Finally, we analyze our currently deployed implementation to
+Unfortunately, this application scenario has many unique characteristics, which
+make a straightforward adoption of such existing peer-to-peer systems for file sharing as BitTorrent suboptimal. In particular,
+there are too many packages to distribute each individually, but the archive is
+too large to distribute in its entirety. The packages are also being constantly
+updated by the loosely-managed developed; yet the interest in a particular version of a package can be very
+limited. They together make it very difficult to efficiently create and manage torrents/trackers. The random downloading nature of BitTorrent-like systems is also different from the
+sequential order used in existing software package distributors. This in turn suppresses interaction with users
+given the difficulty in tracking speed and downloading progress.
+
+In this paper, we propose a novel peer-to-peer assisted distributor design that
+addresses the above challenges. It enhances the existing distribution systems by providing compatible and yet more efficient downloading and updating services
+for software packages. Our design leads to the development of \texttt{apt-p2p}, a practical implementation based on the Debian \footnote{Debian - The Universal Operating System: {\it http://www.debian.org/}} package
+distribution system.  We have addressed the key design issues in \texttt{apt-p2p}, including indexing table customization,
+response time reduction, and multi-value extension. They together ensure
+that the altruistic users' resources be effectively utilized and thus significantly reduce the currently
+sheer bandwidth requirements of hosting the software.
+
+\texttt{apt-p2p}  has been used in conjuction with Debian-based distribution of Linux
+software packages and will also be available in the next release of Ubuntu. We have evaluated our currently deployment  to
 determine how effective it is at meeting our goals, and to see what
-effect it is having on the Debian package distribution system.
+effect it is having on the Debian package distribution system. In particular, our existing real user statistics
+have suggested that it responsively interacts with clients and substantially reduces server cost.
 
 The rest of this paper is organized as follows. The background and motivation are presented in Section~\ref{situation}, including an analysis of BitTorrent's use for this purpose in Section~\ref{bittorrent}. We propose
 our solution in Section~\ref{opportunity}. We then detail our sample
@@ -103,12 +115,12 @@ Section~\ref{conclusions} concludes the paper and offers some future directions.
 \section{Background and Motivations}
 \label{situation}
 
-In the free software society, there are a large number of groups using the Internet to 
+In the free software society, there are a large number of groups using the Internet to
 collaboratively develop and release their software. The ever increasing power of
 modern programming languages and operating systems has made this software, like commercial software, extremely large and complex, though it is often
-distributed in many small units (packages). Together with their popularity among users, 
-an efficient and reliable management and distribution of these packages over the Internet has become a daunting task. In this section, we offer concrete examples illustrating the 
-unique challenges in this context. 
+distributed in many small units (packages). Together with their popularity among users,
+an efficient and reliable management and distribution of these packages over the Internet has become a daunting task. In this section, we offer concrete examples illustrating the
+unique challenges in this context.
 
 \subsection{Free Software Package Distributors}
 \label{examples}
@@ -153,15 +165,15 @@ typical of free software hosting facilities that are open to anyone
 to use, such as SourceForge.
 
 
-Given the free nature of this software, there are often a number of users 
+Given the free nature of this software, there are often a number of users
 motivated by altruism to want to help out with the distribution.
 This is particularly true considering that many of this software is used by
 groups that are staffed mostly, or sometimes completely, by
-volunteers. They are thus motivated to contribute their network resources, so as to promote the healthy development 
+volunteers. They are thus motivated to contribute their network resources, so as to promote the healthy development
 of the volunteer community that released the software.
-We also naturally expect that peer-to-peer distribution can be implementation in 
+We also naturally expect that peer-to-peer distribution can be implementation in
 this context, which scale well with large user bases and can easily explore the network resources made available by
-the volunteers. 
+the volunteers.
 
 
 
@@ -193,7 +205,7 @@ For example, Figure~\ref{size_CDF} shows the size of the packages in the
 current Debian distribution. While 80\% of the packages are less than
 512~KB, some of the packages are hundreds of megabytes. The entire
 archive consists of 22,298 packages and is approximately 119,000 MB
-in size. Most of the packages are to be installed in any computer environment, but there are 
+in size. Most of the packages are to be installed in any computer environment, but there are
 also OS- or architecture-specific packages.
 
 \subsubsection{Package Updates}
@@ -226,7 +238,7 @@ asynchronously on a worldwide scale.
 \subsubsection{Limited Interest}
 
 Finally, though there are a large number of packages and a large number of
-users, the interest in a particular version of a package can be very 
+users, the interest in a particular version of a package can be very
 limited. Specifically, there are core packages that every user has to download, but most
 packages would fall in the category of optional or extra, and so are
 interesting to only a limited number of people.
@@ -247,13 +259,13 @@ users.
 
 \subsubsection{Interactive Users}
 
-The package management software that downloads packages displays
+Given the relatively long time for software package downloading, existing package management systems generally display
 some kind of indication of speed and completeness for users to
-watch. Since previous client-server downloads occurred in a sequential
+monitor. Since previous client-server downloads occurred in a sequential
 fashion, the package management software also measures the speed
-based on sequential downloading. This requires the peer-to-peer
-solution to be reasonably responsive at retrieving packages
-sequentially.
+based on sequential downloading. To offer comparable user experience, it is naturally to expect that
+the new peer-to-peer solution be reasonably responsive at retrieving packages,
+preferably enabling sequential downloading order, too.
 
 \subsection{Why BitTorrent Doesn't Work Well}
 \label{bittorrent}
@@ -264,10 +276,10 @@ images. This straightforward use however can be very ineffective, as it requires
 peers to download large numbers of packages that they are not
 interested in, and prevents them from updating to new packages
 without downloading another image containing a lot of the same
-packages they already have. 
+packages they already have.
 
 An alternative is to create torrents tracking smaller groups of packages. Unfortunately, we find that this enhancement can be
-quite difficult given the unique characteristic of free software packages. 
+quite difficult given the unique characteristic of free software packages.
 First, there is no obvious way to divide the packages into torrents.
 Most of the packages are too small, and there are too many packages
 in the entire archive to create individual torrents for each one.
@@ -288,13 +300,13 @@ this problem. In particular, BitTorrent's fixed piece sizes (usually 512 KB) tha
 boundaries are bigger than many of the packages in the archive. This
 will waste peers' downloading bandwidth as they will end up
 downloading parts of other packages just to get the piece that
-contains the package they do want. 
+contains the package they do want.
 Finally, note that BitTorrent downloads files
 randomly, which does not work well with the interactive package
 management tools expectation of sequential downloads.
 
 On the other hand, there are aspects of BitTorrent that are no
-longer needed in a system such as this one. With altruistic peers
+longer critical. Specifically, with altruistic peers
 and all files being available without uploading, incentives to share
 become a less important issue. Also, the availability of seeds are
 not critical either, as the mirror sites serve in that capacity
@@ -305,12 +317,12 @@ already.
 \section{Peer-to-Peer Assisted Distributor: An Overview}
 \label{opportunity}
 
-We assume that the user is attempting to download packages from a
-server, using package management software to find and retrieve the
-packages. Further, we assume that the requests from the user to the
-server are able to be proxied by our peer-to-peer program, and that
-the server is always available and has all of the package files.
-Finally, the cryptographic hash of the packages must be available
+We now present the design of our peer-to-peer assisted distributor for free software package releases and
+updates. A key principle in our design is that the new functionalities implemented in our distributor should be transparent to users,
+thus offering the same experience as using conventional software management systems, despite enhanced efficiency.
+That said, we assume that the user is still attempting to download packages from a
+server, but the requests will be proxied by our peer-to-peer program. The server is always available and has all of the package files.
+In addition, the cryptographic hash of the packages will be available
 separately from the package itself, and is usually contained in an
 \emph{index} file which also contains all the packages' names,
 locations and sizes.
@@ -322,7 +334,7 @@ locations and sizes.
 \label{model}
 \end{figure}
 
-Our model for using P2P to enhance such a system is shown in
+Our model for using peer-to-peer to enhance package distribution is shown in
 Figure~\ref{model}. As shown in Phase~1, our program will act as a
 proxy (1,2), downloading (3) and caching all files communicated
 between the user and the server (4). It will therefore also have
@@ -330,7 +342,7 @@ available the index files containing the cryptographic hashes all
 packages. Later, in Phase~2, upon receiving a request from the user
 to download a package (5), our program will search the index files
 for the package being requested and find its hash (6). This hash can
-then be looked up recursively in the DHT (7), which will return a
+then be looked up recursively in an indexing structure (a Distributed Hash Table [] in our implementation) (7), which will return a
 list of peers that have the package already (8). The package can
 then be downloaded from the peers (11,12), it can be verified using
 the hash (13), and if valid can be returned to the user (14). The
@@ -379,10 +391,10 @@ distributor's server.
 \subsection{Implementation Options}
 \label{imp_options}
 
-There are several ways to implement the desired P2P functionality
+There are several ways to implement the desired peer-to-peer functionality
 into the existing package management software. The functionality can
 be directly integrated through modifications to the software, though
-this could be difficult as the P2P functionality should be running
+this could be difficult as the peer-to-peer functionality should be running
 at all times. This is needed both for efficient lookups and to
 support uploading of already downloaded packages. Unfortunately, the
 package management tools typically only run until the download and
@@ -390,11 +402,11 @@ install request is complete.
 
 Many of the package management software implementations use HTTP
 requests from web servers to download the packages, which makes it
-possible to implement the P2P aspect as an almost standard HTTP
+possible to implement the peer-to-peer aspect as an almost standard HTTP
 caching proxy. This proxy will run as a daemon in the background,
 listening for requests from the package management tool for package
 files, as well as serving (uploading) cached package to other peers.
-It will get uncached requests first from the P2P system, or
+It will get uncached requests first from the peer-to-peer system, or
 fall back to the normal HTTP request from a server should it not
 be found. For methods that don't use HTTP requests, other types of
 proxies may also be possible.
@@ -404,7 +416,7 @@ proxies may also be possible.
 
 Although not necessary, we recommend implementing a download
 protocol that is similar to the protocol used to fetch packages from
-the distributor's servers. This simplifies the P2P program, as it
+the distributor's servers. This simplifies the peer-to-peer program, as it
 can then treat peers and mirrors almost identically when requesting
 packages. In fact, the mirrors can be used when there are only a few
 slow peers available for a file to help speed up the download
@@ -422,7 +434,7 @@ available.
 
 Since the package management system only stores a hash of the entire
 package, and not of pieces of that package, we will need to be able
-to store and retrieve these piece hashes using the P2P protocol. In
+to store and retrieve these piece hashes using the peer-to-peer protocol. In
 addition to storing the file download location in the DHT (which
 would still be used for small files), a peer will store a
 \emph{torrent string} containing the peer's hashes of the pieces of
@@ -439,25 +451,20 @@ the downloaded package.
 We have created a sample implementation that functions as described
 in section \ref{opportunity}, and is freely available for other
 distributors to download and modify \cite{apt-p2p}. This software,
-called \texttt{apt-p2p}, interacts with the \texttt{apt} tool which
-is found in most Debian-based Linux distributions. \texttt{apt} uses
-SHA1 hashes to verify most downloaded files, including the large
-index files that contain the hashes of the individual packages. We
-chose this distribution system as it is familiar to us, it allows
-software contributions, and there are interesting statistics
+called \texttt{apt-p2p}, interacts with the popular \texttt{apt} tool. This tool 
+is found in most Debian-based Linux distributions, with related statistics
 available for analyzing the popularity of the software packages
 \cite{popcon}.
 
 Since all requests from \texttt{apt} are in the form of HTTP downloads from a
-server, the implementation takes the form of a caching HTTP proxy.
+server, our implementation takes the form of a caching HTTP proxy.
 Making a standard \texttt{apt} implementation use the proxy is then
 as simple as prepending the proxy location and port to the front of
 the mirror name in \texttt{apt}'s configuration file (i.e.
 ``http://localhost:9977/mirrorname.debian.org/\ldots'').
 
 We created a customized DHT based on Khashmir \cite{khashmir}, which
-is an implementation of Kademlia \cite{kademlia} using methods
-familiar to BitTorrent developers. Khashmir is also the same DHT
+is an implementation of Kademlia \cite{kademlia}. Khashmir is also the same DHT
 implementation used by most of the existing BitTorrent clients to
 implement trackerless operation. The communication is all handled by
 UDP messages, and RPC (remote procedure call) requests and responses
@@ -476,7 +483,9 @@ for the proxy also doubles as the server listening for requests for
 downloads from other peers. All peers support HTTP/1.1, both in the
 server and the client, which allows for pipelining of multiple
 requests to a peer, and the requesting of smaller pieces of a large
-file using the HTTP Range request header.
+file using the HTTP Range request header. Like in \texttt{apt}, 
+SHA1 hashes are then used to verify downloaded files, including the large
+index files that contain the hashes of the individual packages. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -492,7 +501,7 @@ up queries, allowed the storage of multiple values for each key, and
 incorporated some improvements from BitTorrent's tracker-less DHT
 implementation.
 
-\subsection{DHT Background}
+\subsection{Kademlia DHT Background}
 \label{dht}
 
 DHT's operate by storing (\emph{key}, \emph{value}) pairs in a
@@ -563,7 +572,7 @@ torrent string as they require 5 to 70 pieces. Finally, there are
 only 62 packages that require more than 70 pieces, and so will
 require a separate request to a peer for the torrent string.
 
-\subsection{Response Time}
+\subsection{Response Time Optimization}
 \label{response_time}
 
 Many of our customizations to the DHT have been to try and improve
@@ -636,7 +645,7 @@ constant as it is a configuration option, but can be much larger if
 the node is too overloaded for the program to be able to check for a
 timeout very often.
 
-\subsection{Multiple Values}
+\subsection{Extension with Multiple Values}
 \label{multiple_values}
 
 The original design of Kademlia specified that each key would have
@@ -671,60 +680,7 @@ abort the search once it has found enough values in some nodes, or
 it could choose to only request values from the nodes that are
 closest to the key being searched for.
 
-\subsection{\textbf{OPTIONAL}: BitTorrent's Improvements}
-\label{bittorrent_dht}
 
-In the several years that some BitTorrent clients have been using a
-Kademlia-based DHT for tracker-less operation, the developers have
-made many enhancements which we can take advantage of. One of the
-most important is a security feature added to stop malicious nodes
-from subscribing other nodes as downloaders. When a node issues a
-request to another node to store its download info for that key, it
-must include a \emph{token} returned by the storing node in a recent
-\texttt{find\_node} request. The token is created by hashing the IP
-address of the requesting peer with a temporary secret that expires
-after several minutes. This prevents the requesting peer from faking
-its IP address in the store request, since it must first receive a
-response from a \texttt{find\_node} on that IP.
-
-We also made some BitTorrent-inspired changes to the parameters of
-the DHT originally specified by the authors of Kademlia. Since, as
-we will show later, peers stay online in our system for much longer
-periods of time, we reduced Kademlia's \emph{k} value from 20 to 8.
-The value is supposed to be large enough such that any given
-\emph{k} nodes are unlikely to fail within an hour of each other,
-which is very unlikely in our system given the long uptimes of
-nodes (see Figure~\ref{duration_online_1} in Section~\ref{analysis}.
-We also increased the number of concurrent outstanding
-requests allowed from 3 to 6 to speed up the recursive key finding
-processes.
-
-\subsection{\textbf{OPTIONAL}: Other Changes}
-\label{other_changes}
-
-We added one other new RPC request that nodes can make:
-\texttt{join}. This request is only sent on first loading the DHT,
-and is usually only sent to the bootstrap nodes that are listed for
-the DHT. These bootstrap nodes will respond to the request with the
-requesting peer's IP and port, so that the peer can determine what
-its oustide IP address is and whether port translation is being
-used. In the future, we hope to add functionality similar to STUN
-\cite{STUN}, so that nodes can detect whether they are NATted and
-take appropriate steps to circumvent it.
-
-In addition, we have allowed peers to store values in the DHT, even
-if the hash they are using is not the correct length. Most of the
-keys used in the DHT are based on the SHA1 hash, and so they are 20
-bytes in length. However, some files in the targetted Debian package
-system are only hashed using the MD5 algorithm, and so the hashes
-retrieved from the server are 16 bytes in length. The DHT will still
-store values using these keys by padding the end of them with zeroes
-to the proper length, as the loss of uniqueness from the 4 less
-bytes is not an issue. Also, the DHT will happily store hashes that
-are longer than 20 bytes, such as those from the 32 byte SHA256
-algorithm, by truncating them to the correct length. Since the
-requesting peer will have the full length of the hash, this will not
-affect its attempt to verify the downloaded file.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -767,7 +723,16 @@ recently, which will cause the peer to wait for a timeout to occur
 unable to contribute any upload bandwidth to other peers, as all
 requests for packages from them will also timeout. From
 Figure~\ref{walker_peers}, we see that approximately half of all
-peers suffered from this restriction.
+peers suffered from this restriction. To address this problem, we added one other new RPC request that nodes can make:
+\texttt{join}. This request is only sent on first loading the DHT,
+and is usually only sent to the bootstrap nodes that are listed for
+the DHT. These bootstrap nodes will respond to the request with the
+requesting peer's IP and port, so that the peer can determine what
+its oustide IP address is and whether port translation is being
+used. In the future, we hope to add functionality similar to STUN
+\cite{STUN}, so that nodes can detect whether they are NATted and
+take appropriate steps to circumvent it.
+
 
 \begin{figure}
 \centering
@@ -784,7 +749,7 @@ long period in the system.
 Indeed, we find that 50\% of connections last longer than 5
 hours, and 20\% last longer than 10 hours. These connections are
 much longer than those reported by Saroiu et. al. \cite{saroiu2001}
-for other P2P systems, which had 50\% of Napster and Gnutella
+for other peer-to-peer systems, which had 50\% of Napster and Gnutella
 sessions lasting only 1 hour.
 
 \begin{figure}
@@ -831,7 +796,7 @@ the system, will stay online for another 6 hours.}
 \label{duration_online_6}
 \end{figure}
 
-\textbf{OPTIONAL}: Since our peers are much longer-lived than other P2P systems, we
+\textbf{OPTIONAL}: Since our peers are much longer-lived than other peer-to-peer systems, we
 also looked at the fraction of peers that stay online for another 6
 hours. Figure~\ref{duration_online_6} shows that over 60\% of peers
 that are online for 10 hours will stay online for another 6.
@@ -927,8 +892,8 @@ considers all the files available to users to download, and makes
 use of the existing infrastructure unmodified.
 
 \textbf{OPTIONAL}: Others have also used DHTs to support this type of functionality.
-Kenosis \cite{kenosis} is a P2P Remote Procedure Call
-client also based on the Kademlia DHT, but it is meant as a P2P
+Kenosis \cite{kenosis} is a peer-to-peer Remote Procedure Call
+client also based on the Kademlia DHT, but it is meant as a peer-to-peer
 primitive system on which other tools can be built, and so it has no
 file sharing functionality at all. Many have used a DHT as a drop-in
 replacement for the tracker in a BitTorrent system
@@ -983,26 +948,25 @@ users.
 \section{Conclusion and Future Work}
 \label{conclusions}
 
-We have designed a generally applicable peer-to-peer content
-distribution model to be used by many of the free software
-distributors operating today. It makes use of already existing
-features of most package management systems to create a
-peer-to-peer distribution that should substantially reduce the costs
-of hosting the software packages.
+In this paper, we have provided strong evidence that free software package distribution 
+and update exhibit many distinct characteristics, which call for new designs other
+than the existing peer-to-peer systems for file sharing. To this end, we have 
+present \texttt{apt-p2p}, a novel peer-to-peer distributor that sits between
+client and server, providing efficient and transparent downloading and updating services
+for software packages. We have addressed the key design issues in \texttt{apt-p2p}, including DHT customization,
+response time reduction, and multi-value extension. \texttt{apt-p2p}  has been used in conjuction with Debian-based distribution of Linux
+software packages and will also be available in the next release of Ubuntu. Existing real user statistics
+have suggested that it interacts well with clients and substantially reduces server cost. 
 
-We have also implemented our design in freely available software to
-be used in conjuction with Debian-based distribution of Linux
-software packages. It is currently in use by some users of the
-Debian project's distribution, and so serves as an example of the
-possibilities that exist.
+There are many future avenues toward improving our implementation. Besides 
+evaluating its performance in larger scales, we are particularly interest in further speeding up some of the slower recursive
+DHT requests. We expect to accomplish this by fine tuning the
+parameters of our current system, better exclusion of NATted peers
+from the routing tables, and through the use of STUN \cite{STUN} to
+circumvent the NATs of the 50\% of the peers that have not
+configured port forwarding.
 
-We feel that our P2P software package distribution model is
-well-suited to be used by many free software distributors. We hope
-to convince them to adopt such a model in their distribution, or we
-may port our existing system to some of the other groups for them to
-try.
-
-\textbf{OPTIONAL}: One aspect missing from our model is the removal of old packages
+One aspect missing from our model is the removal of old packages
 from the cache. Since our implementation is still relatively young,
 we have not had to deal with the problems of a growing cache of
 obsolete packages consuming all of a user's hard drive. We plan to
@@ -1011,13 +975,7 @@ technique, in which packages that are no longer available on the
 server, no longer requested by peers, or simply are the oldest in
 the cache, will be removed.
 
-The most significant area of improvement still needed in our sample
-implementation is to further speed up some of the slower recursive
-DHT requests. We hope to accomplish this by further tuning the
-parameters of our current system, better exclusion of NATted peers
-from the routing tables, and through the use of STUN \cite{STUN} to
-circumvent the NATs of the 50\% of the peers that have not
-configured port forwarding.
+
 
 \bibliographystyle{IEEEtran}
 \bibliography{./IEEEabrv,./all}
