Final version of paper.

--- a/docs/paper/all.bib
+++ b/docs/paper/all.bib
@@ -237,7 +237,40 @@
     key = "apt-p2p",
 }
 
+@electronic{apt,
+    title = "{The Advanced packaging tool, or APT (from Wikipedia)}",
+    url = "http://en.wikipedia.org/wiki/Advanced_Packaging_Tool",
+}
+
+@electronic{ubuntu-blueprint,
+    title = "Ubuntu blueprint for using torrent's to download packages",
+    url = "https://blueprints.launchpad.net/ubuntu/+spec/apt-torrent",
+    year = "2008",
+}
+
 %%%%%%% BibSonomy References %%%%%%%%%
+
+@article{microsoft-update,
+ author = {Christos Gkantsidis and Thomas Karagiannis and Milan VojnoviC},
+ title = {Planet scale software updates},
+ journal = {SIGCOMM Comput. Commun. Rev.},
+ volume = {36},
+ number = {4},
+ year = {2006},
+ issn = {0146-4833},
+ pages = {423--434},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
+@article{feller2000fao,
+  title={{A framework analysis of the open source software development paradigm}},
+  author={Feller, J. and Fitzgerald, B.},
+  journal={Proceedings of the twenty first international conference on Information systems},
+  pages={58--69},
+  year={2000},
+  publisher={Association for Information Systems Atlanta, GA, USA}
+}
 
 @article{globule,
   title={{Globule: a collaborative content delivery network}},
@@ -252,9 +285,7 @@
 @inproceedings{shah08,
 	title = {A {P2P} Based Architecture for Secure Software Delivery Using Volunteer Assistance},
 	author = {P. Shah and J.-F. Pâris and J. Morgan and J. Schettino and C. Venkatraman},
-	booktitle = {P2P},
-	publisher = {IEEE},
-	year = {2008},
+	booktitle = {8th International Conference on Peer-to-Peer Computing 2008 (P2P'08)},
 	keywords = {apt-p2p }
 }
 
