--- a/docs/paper/paper.tex
+++ b/docs/paper/paper.tex
@@ -55,7 +55,7 @@ for software packages. Our design leads to \texttt{apt-p2p}, a practical impleme
 software packages and will also be available in the next release of Ubuntu. We have addressed the key design issues in \texttt{apt-p2p}, including indexing table customization,
 response time reduction, and multi-value extension. They together ensure
 that the altruistic users' resources are effectively utilized and thus significantly reduces the currently
-large bandwidth requirements of hosting the software, as confirmed by our existing real user statistics.
+large bandwidth requirements of hosting the software, as confirmed by our existing real user statistics over the Internet.
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -64,20 +64,20 @@ large bandwidth requirements of hosting the software, as confirmed by our existi
 \label{intro}
 
 With the widespread penetration of broadband access, the Internet has become a cost-effective
-vehicle for software development and release. This is particularly true for the free software
+vehicle for software development and release \cite{feller2000fao}. This is particularly true for the free software
 community whose developers and users are distributed worldwide and work asynchronously. The ever increasing power of
 modern programming languages, computer platforms, and operating systems has made this software extremely large and complex,
 though it is often divided into a huge number of small packages.
 Together with their popularity among users,
-an efficient and reliable management and distribution of these software packages over the Internet has become a challenging task.
+an efficient and reliable management and distribution of these software packages over the Internet has become a challenging task \cite{ubuntu-blueprint}.
 
 The existing distribution for free software is mostly based on the client/server model, e.g.,
-the Advanced Package Tool (\texttt{apt}) for Linux, which suffers from the well-known bottleneck problem.
-Given the free nature of this software, there are often a number of users
+the Advanced Package Tool (\texttt{apt}) for Linux \cite{apt}, which suffers from the well-known bottleneck problem.
+Given the free nature of these software, there are often a number of users
 motivated by altruism to help out with the distribution, so as to promote the healthy development
 of this voluntary society.
 We thus naturally expect that peer-to-peer distribution can be implemented in
-this context, which will scale well with the currently large user bases and can easily explore the network resources made available by
+this context, which will scale well with the currently large user bases and can easily explore the resources made available by
 the volunteers.
 
 Unfortunately, this application scenario has many unique characteristics, which
@@ -116,11 +116,9 @@ Section~\ref{conclusions} concludes the paper and offers some future directions.
 \section{Background and Motivations}
 \label{situation}
 
-In the free software society, there are a large number of groups using the Internet to
-collaboratively develop and release their software. The ever increasing power of
-modern programming languages and operating systems has made this software, like commercial software, extremely large and complex, though it is often
-distributed in many small units (packages). Together with their popularity among users,
-an efficient and reliable management and distribution of these packages over the Internet has become a daunting task. In this section, we offer concrete examples illustrating the
+In the free software community, there are a large number of groups using the Internet to
+collaboratively develop and release their software. Efficient and reliable management and distribution 
+of these software packages over the Internet thus has become a critical task. In this section, we offer concrete examples illustrating the
 unique challenges in this context.
 
 \subsection{Free Software Package Distributors}
@@ -218,7 +216,7 @@ releasing a new version with improved functionality,
 or the distributor updating their packaging of the
 software to meet new requirements. Even if the distributor
 periodically makes \emph{stable} releases, which are snapshots of
-all the packages in the archive at a certain time, later updates are still
+all the packages in the archive at a certain time, many later updates are still
 released for security issues or serious bugs.
 
 \begin{figure}
@@ -233,17 +231,17 @@ For example, Figure~\ref{update_size} shows the amount of data in
 the Debian archive that was updated each day over a period of 3
 months. Every single day, approximately 1.5\% of the 119,000 MB archive is
 updated with new versions of packages. This frequency is much higher than
-that of most commercial software, mainly because much of free software is
+that of most commercial software \cite{microsoft-update}, mainly because much of free software is
 developed in a loosely managed environment of developers working
 asynchronously on a worldwide scale.
 
 \subsubsection{Limited Interest}
 
-Finally, though there are a large number of packages and a large number of
+Though there are a large number of packages and a large number of
 users, the interest in a particular package, or version of a package, can be very
 limited. Specifically, there are core packages that every user has to download, but most
 packages would fall in the category of optional or extra, and so are
-interesting to only a limited number of people.
+interesting to only a limited number of users.
 
 \begin{figure}
 \centering
@@ -261,15 +259,15 @@ users.
 
 \subsubsection{Interactive Users}
 
-Given the relatively long time for software package downloading, existing package management systems generally display
+Finally, given the relatively long time for software package downloading, existing package management systems generally display
 some kind of indication of speed and completeness for users to
 monitor. Since previous client-server downloads occurred in a sequential
 fashion, the package management software also measures the speed
 based on sequential downloading. To offer comparable user experience, it is natural to expect that
 the new peer-to-peer solution be reasonably responsive at retrieving packages,
-preferably in a sequential downloading order too.
+preferably in a sequential downloading order too. 
 
-\subsection{Why BitTorrent Doesn't Work Well}
+\subsection{Why BitTorrent Does Not Work Well}
 \label{bittorrent}
 
 Many distributors make their software available using
@@ -337,6 +335,7 @@ locations and sizes.
 \label{model}
 \end{figure}
 
+\subsection{System Overview}
 Our model for using peer-to-peer to enhance package distribution is shown in
 Figure~\ref{model}. As shown in Phase~1, our program will act as a
 proxy (1,2), downloading (3) and caching all files communicated
@@ -345,7 +344,7 @@ available the index files containing the cryptographic hashes all
 packages. Later, in Phase~2, upon receiving a request from the user
 to download a package (5), our program will search the index files
 for the package being requested and find its hash (6). This hash can
-then be looked up recursively in an indexing structure (a Distributed Hash Table in our implementation) (7), which will return a
+then be looked up recursively in an indexing structure (a Distributed Hash Table, or DHT \cite{kademlia}, in our implementation) (7), which will return a
 list of peers that have the package already (8). The package can
 then be downloaded from the peers (11,12), it can be verified using
 the hash (13), and if valid can be returned to the user (14). The
@@ -359,7 +358,7 @@ downloading from the original location (i.e. the server).
 The server thus, with no modification to its
 functionality, serves as a seed for the packages in the peer-to-peer
 system. Any packages that have just been updated, or that are very
-rare, and so don't have any peers available, can always be found on
+rare, and so do not have any peers available, can always be found on
 the server. Once the peer has completed the download from the server
 and verified the package, it can then add itself to the DHT as the
 first peer for the new package, so that future requests for the package
@@ -367,8 +366,7 @@ will not need the server.
 
 This sparse
 interest in a large number of packages undergoing constant updating
-is well suited to the functionality provided by a Distributed Hash
-Table (DHT). DHTs require unique keys to store and retrieve strings
+is well suited to the functionality provided by a DHT. A DHT requires unique keys to store and retrieve strings
 of data, for which the cryptographic hashes used by these package
 management systems are perfect for. The stored and retrieved strings
 can then be pointers to the peers that have the package that hashes
@@ -389,7 +387,7 @@ distributor's server.
 
 % \subsection{Implementation Options}
 % \label{imp_options}
-% 
+%
 % There are several ways to implement the desired peer-to-peer functionality
 % into the existing package management software. The functionality can
 % be directly integrated through modifications to the software, though
@@ -398,7 +396,7 @@ distributor's server.
 % support uploading of already downloaded packages. Unfortunately, the
 % package management tools typically only run until the download and
 % install request is complete.
-% 
+%
 % Many of the package management software implementations use HTTP
 % requests from web servers to download the packages, which makes it
 % possible to implement the peer-to-peer aspect as an almost standard HTTP
@@ -407,7 +405,7 @@ distributor's server.
 % files, as well as serving (uploading) cached package to other peers.
 % It will get uncached requests first from the peer-to-peer system, or
 % fall back to the normal HTTP request from a server should it not
-% be found. For methods that don't use HTTP requests, other types of
+% be found. For methods that do not use HTTP requests, other types of
 % proxies may also be possible.
 
 \subsection{Peer Downloading Protocol}
@@ -452,7 +450,7 @@ the downloaded package.
 We have created a sample implementation that functions as described
 in section \ref{opportunity}, and is freely available for other
 distributors to download and modify \cite{apt-p2p}. This software,
-called \texttt{apt-p2p}, interacts with the popular \texttt{apt} tool. This tool 
+called \texttt{apt-p2p}, interacts with the popular \texttt{apt} tool. This tool
 is found in most Debian-based Linux distributions, with related statistics
 available for analyzing the popularity of the software packages
 \cite{popcon}.
@@ -485,9 +483,9 @@ for the proxy also doubles as the server listening for requests for
 downloads from other peers. All peers support HTTP/1.1, both in the
 server and the client, which allows for pipelining of multiple
 requests to a peer, and the requesting of smaller pieces of a large
-file using the HTTP Range request header. Like in \texttt{apt}, 
+file using the HTTP Range request header. Like in \texttt{apt},
 SHA1 hashes are then used to verify downloaded files, including the large
-index files that contain the hashes of the individual packages. 
+index files that contain the hashes of the individual packages.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -681,7 +679,7 @@ closest to the key being searched for.
 
 % \subsection{\textbf{OPTIONAL}: BitTorrent's Improvements}
 % \label{bittorrent_dht}
-% 
+%
 % In the several years that some BitTorrent clients have been using a
 % Kademlia-based DHT for tracker-less operation, the developers have
 % made many enhancements which we can take advantage of. One of the
@@ -694,7 +692,7 @@ closest to the key being searched for.
 % after several minutes. This prevents the requesting peer from faking
 % its IP address in the store request, since it must first receive a
 % response from a \texttt{find\_node} on that IP.
-% 
+%
 % We also made some BitTorrent-inspired changes to the parameters of
 % the DHT originally specified by the authors of Kademlia. Since, as
 % we will show later, peers stay online in our system for much longer
@@ -706,10 +704,10 @@ closest to the key being searched for.
 % We also increased the number of concurrent outstanding
 % requests allowed from 3 to 6 to speed up the recursive key finding
 % processes.
-% 
+%
 % \subsection{\textbf{OPTIONAL}: Other Changes}
 % \label{other_changes}
-% 
+%
 % In addition, we have allowed peers to store values in the DHT, even
 % if the hash they are using is not the correct length. Most of the
 % keys used in the DHT are based on the SHA1 hash, and so they are 20
@@ -735,7 +733,7 @@ distribution system has been available to all Debian users since May
 next release of Ubuntu \cite{apt-p2p-ubuntu}. We have since created
 a \emph{walker} that will navigate the DHT and find all the peers
 currently connected to it. This allows us to analyze many aspects of
-our implementation.
+our implementation in the real Internet environment.
 
 \subsection{Peer Lifetimes}
 \label{peer_life}
@@ -801,7 +799,7 @@ sessions lasting only 1 hour.
 % system.}
 % \label{duration_ind_peers}
 % \end{figure}
-% 
+%
 % \textbf{OPTIONAL}: We also examined the average time each individual peer spends in the
 % system. Figure~\ref{duration_peers} shows the cumulative
 % distribution of how long each individual peer remains in the system.
@@ -837,7 +835,7 @@ Gnutella.
 % the system, will stay online for another 6 hours.}
 % \label{duration_online_6}
 % \end{figure}
-% 
+%
 % \textbf{OPTIONAL}: Since our peers are much longer-lived than other peer-to-peer systems, we
 % also looked at the fraction of peers that stay online for another 6
 % hours. Figure~\ref{duration_online_6} shows that over 60\% of peers
@@ -967,7 +965,7 @@ larger amounts of bandwidth, both for uploading to others, and in
 downloading content they are not in need of in order to share them
 with other users. Our system treats all users equally, requiring all
 to become peers in the system, sharing the uploading load equally
-amongst all, but doesn't require any user to download files they
+amongst all, but does not require any user to download files they
 would not otherwise need.
 
 The most similar works to ours are by Shah et. al. \cite{shah08} and
@@ -979,7 +977,7 @@ minutes.'' In contrast, lookups in our system take only seconds to
 complete, and all requests can be completed in under a minute.
 Shark makes use of Coral's distributed sloppy hash table to speed
 the lookup time, but their system is more suited to its intended use
-as a distributed file server. It doesn't make use of authoritative
+as a distributed file server. It does not make use of authoritative
 copies of the original files, allowing instead any users in the
 system to update files and propagate those changes to others. Our
 system is well-tailored to the application of disseminating the
@@ -992,17 +990,17 @@ users.
 \section{Conclusion and Future Work}
 \label{conclusions}
 
-In this paper, we have provided strong evidence that free software package distribution 
+In this paper, we have provided strong evidence that free software package distribution
 and update exhibit many distinct characteristics, which call for new designs other
-than the existing peer-to-peer systems for file sharing. To this end, we have 
+than the existing peer-to-peer systems for file sharing. To this end, we have
 present \texttt{apt-p2p}, a novel peer-to-peer distributor that sits between
 client and server, providing efficient and transparent downloading and updating services
 for software packages. We have addressed the key design issues in \texttt{apt-p2p}, including DHT customization,
 response time reduction, and multi-value extension. \texttt{apt-p2p}  has been used in conjuction with Debian-based distribution of Linux
 software packages and will also be available in the next release of Ubuntu. Existing real user statistics
-have suggested that it interacts well with clients and substantially reduces server cost. 
+have suggested that it interacts well with clients and substantially reduces server cost.
 
-There are many future avenues toward improving our implementation. Besides 
+There are many future avenues toward improving our implementation. Besides
 evaluating its performance in larger scales, we are particularly interest in further speeding up some of the slower recursive
 DHT requests. We expect to accomplish this by fine tuning the
 parameters of our current system, better exclusion of NATted peers
